# simple-cppbuilder

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.android  Dockerfile.android-21  Dockerfile.android-v  Dockerfile.base  Dockerfile.ci  Dockerfile.ci-setup-cpp  Dockerfile.ci-windows  Dockerfile.ci2  Dockerfile.clang  Dockerfile.cross  Dockerfile.cross-rpi  Dockerfile.crosstool-ng  Dockerfile.crosstool-ng-rpi  Dockerfile.emscripten  Dockerfile.gcc  Dockerfile.gnueabihf  Dockerfile.mingw-w64  Dockerfile.mingw-w64.mxe  Dockerfile.mxe  Dockerfile.rpi  Dockerfile.rpi-without-tools  Dockerfile.without-vcpkg  LICENSE  README.md  Taskfile.yml  build-images.all.sh  build-images.android-21.sh  build-images.android-24.sh  build-images.android.sh  build-images.arm.crosstool.sh  build-images.arm.sh  build-images.emscripten.sh  build-images.gcc.sh  build-images.mingw.mxe.sh  build-images.mingw.sh  (+12 more)
.github/workflows/: ci.android.yml  ci.cross.arm.yml  ci.cross.rpi.yml  ci.cross.yml  ci.experimental.yml  ci.release.yml  ci.rpi.yml  ci.yml
android-example/: CMakeLists.txt  my_lib.cpp
cmake/: aarch64-rpi-toolchain.cmake  aarch64-rpi.toolchain.cmake  aarch64-toolchain.cmake  aarch64.toolchain.cmake  arm-rpi-toolchain.cmake  arm-rpi.toolchain.cmake  arm.toolchain.cmake  avr-toolchain.cmake  avr.toolchain.cmake  gnueabihf-toolchain.cmake  mingw-w64-toolchain.cmake  mingw-w64.toolchain.cmake  rpi-toolchain.cmake  x86_64-w64-mingw32.toolchain.cmake
cpp_starter_project/: Dockerfile  docker-compose.yml
custom-triplets/: arm-rpi.cmake  arm64-rpi.cmake
example/: .gitignore  CMakeLists.txt  Dockerfile.emscripten  Dockerfile.gnueabihf  Dockerfile.mingw  Dockerfile.raylib  Dockerfile.rpi  LICENSE  README.md  docker-compose.yml  vcpkg.json
example/cmake/: CodeCoverage.cmake  CompilerWarnings.cmake
example/src/: CMakeLists.txt  example.cpp
example/test/tests/: test.cpp
examples/android-example/: .dockerignore  Dockerfile  README.md  docker-compose.yml  vcpkg.json
examples/android-example/cmake/: vcpkg_android.cmake
examples/cpp_starter_project/: Dockerfile  docker-build.sh  docker-compose.yml  docker-test.sh
examples/example/: .dockerignore  .gitattributes  CMakeLists.txt  CMakeSettings.json  Dockerfile  Dockerfile.ci  Dockerfile.raylib  docker-build.sh  docker-compose-ci.yml  docker-compose-more.yml  docker-compose.cross.yml  docker-compose.yml  docker-test-coverage.sh  docker-test.sh  vcpkg.json
examples/example-ci/: CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  vcpkg.json
examples/example-ci/cmake/: CPM.cmake
examples/example-ci/src/: CMakeLists.txt
examples/example-ci/src/app/: main.cpp
examples/example-ci/src/example/: example.cpp
examples/example-ci/test/example/: CMakeLists.txt  test.cpp
examples/example/cmake/: EnumOption.cmake  Options.cmake  StandardProjectSettings.cmake
examples/example/src/app/: CMakeLists.txt  main.cpp
examples/example/src/example/: CMakeLists.txt  example.h
examples/example/test/: CMakeLists.txt
examples/example/test/tests/: CMakeLists.txt
examples/single/: CMakeLists.txt  docker-build.sh  docker-test.sh  main.cpp
examples/web-example/: .dockerignore  CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
scripts/: custom-env.android.sh  docker-build-without-toolchain.sh  docker-build.android.sh  docker-build.ci-mingw.sh  docker-build.cross.sh  docker-build.emscripten.sh  docker-build.mingw.sh  docker-build.mxe.sh  docker-build.rpi.sh  docker-build.setup-cpp.sh  docker-build.setup-env.sh  docker-build.sh  docker-entrypoint.android.sh  docker-entrypoint.ci.sh  docker-entrypoint.cross.sh  docker-entrypoint.setup-cpp.sh  docker-test-coverage.setup-cpp.sh  docker-test-coverage.sh  docker-test.cross.sh  docker-test.mingw.sh  docker-test.setup-cpp.sh  docker-test.setup-env.sh  docker-test.sh
taskfiles/: TaskfileCross.yml  TaskfileDefault.yml  TaskfileSetupCpp.yml  TaskfileSetupCppCross.yml  TaskfileWithoutVcpkgToolchain.yml
taskfiles/docker/: Build.yml  Test.yml
tests/: aarch64-test.yaml  arm-android-test.yaml  arm-none-eabi-test.yaml  base-test.yaml  ci-setup-cpp-test.yaml  ci-test.yaml  ci-windows-test.yaml  ci2-test.yaml  clang-test.yaml  emscripten-test.yaml  gcc10-test.yaml  gcc9-test.yaml  mingw-ci-test.yaml  mingw-test.yaml  mxe-test.yaml  rpi4-test.yaml  test.yaml  without-vcpkg-test.yaml
